--- a/.github/workflows/blacklist-scan.yml
+++ b/.github/workflows/blacklist-scan.yml
@@ -17,7 +17,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'  # Replace '3.x' with your desired Python version
+          python-version: '3.11'  # Replace '3.x' with your desired Python version
 
       - name: Scan PR for blacklisted words
-        run: python scan_pr.py
+        run: |
+          python -m pip install requests
+          python mypythonscript.py
