added env var for PR

--- a/.github/workflows/blacklist-scan.yml
+++ b/.github/workflows/blacklist-scan.yml
@@ -21,6 +21,9 @@ jobs:
 
       - name: Install requests dependencies
         run: python -m pip install requests
+        
+      - name: Set PR_NUMBER environment variable
+        run: echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
       
       - name: Scan PR     
         run: python scan_pr.py
