added env var for github workflow created action

--- a/.github/workflows/blacklist-scan.yml
+++ b/.github/workflows/blacklist-scan.yml
@@ -5,7 +5,9 @@ on:
     types:
       - opened
       - synchronize
-
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
 jobs:
   scan:
     runs-on: ubuntu-latest
