--- a/.github/workflows/blacklist-scan.yml
+++ b/.github/workflows/blacklist-scan.yml
@@ -5,8 +5,6 @@ on:
     types:
       - opened
       - synchronize
-env:
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
 jobs:
   scan:
@@ -27,5 +25,22 @@ jobs:
       - name: Set PR_NUMBER environment variable
         run: echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
       
-      - name: Scan PR     
-        run: python scan_pr.py
+      - name: Run blacklist scan
+        id: scan
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          python scan_pr.py
+          if [[ $? != 0 ]]; then
+            echo "::set-output name=scan-result::failed"
+          else
+            echo "::set-output name=scan-result::passed"
+          fi
+
+  fail-on-issue:
+    needs: scan
+    if: ${{ needs.scan.outputs.scan-result == 'failed' }}
+
+    steps:
+      - name: Fail the workflow
+        run: exit 1
