--- a/.github/workflows/blacklist-scan.yml
+++ b/.github/workflows/blacklist-scan.yml
@@ -5,7 +5,9 @@ on:
     types:
       - opened
       - synchronize
-  
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   scan:
     runs-on: ubuntu-latest
@@ -21,26 +23,14 @@ jobs:
 
       - name: Install requests dependencies
         run: python -m pip install requests
-        
+
       - name: Set PR_NUMBER environment variable
         run: echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
-      
-      - name: Run blacklist scan
-        id: scan
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Scan PR
         run: |
           python scan_pr.py
-          if [[ $? != 0 ]]; then
-            echo "::set-output name=scan-result::failed"
-          else
-            echo "::set-output name=scan-result::passed"
+          if [ $? -eq 1 ]; then
+            echo "Blacklist scan found issues."
+            exit 1
           fi
-
-    fail-on-issue:
-      needs: scan
-      if: ${{ needs.scan.outputs.scan-result == 'failed' }}
-
-    steps:
-      - name: Fail the workflow
-        run: exit 1
